# werken

./: .gitignore  LICENSE  notes.txt  pytest.ini  setup.cfg
src/werken/: cli.py  tids.py
src/werken/tests/: test_tids.py
