[metadata]
license = MIT
license_file = LICENSE
name = werken


[options]
include_package_data = True
install_requires =
    click
    pybase62
package_dir =
    = src
packages = werken
python_requires = >=3.9


[options.entry_points]
console_scripts =
    new-term = werken.cli:new_term


[options.extras_require]
tests =
    pytest
    pytest-cov
    pytest-flake8
